# DS

DS1/: main.py  pyproject.toml
HW_2/: Hw2_1.ipynb  Hw2_2.ipynb  Hw2_3.ipynb
python_data 2/: README.md  pyproject.toml  requirements.txt
