[tool.poetry]
name = "ds-1"
version = "0.1.0"
description = ""
authors = ["GkiriChen <128749954+GkiriChen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
